--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ body {
     text-align: center;
 }
 
-.aboutme h1 {
+.aboutme h2 {
     font-family: Roboto Mono;
     font-style: normal;
     font-weight: normal;
@@ -102,7 +102,7 @@ body {
     line-height: 45px;
 }
 
-.skills h1 {
+.skills h4 {
     font-family: Roboto Mono;
     font-style: normal;
     font-weight: normal;
@@ -144,4 +144,17 @@ footer li {
     padding-right: 120px;
     padding-top: 30x;
     padding-bottom: 5px;
+}
+
+@media only screen and (max-width: 600) {  
+    #catergoryGrid {
+        display: grid;
+        grid-template-rows: 300px 300px 300px;
+        grid-template-columns: 1fr;
+        grid-template-areas:
+        "aboutme"
+        "mywork"
+        "skills"
+        ;
+    }
 }
